# moonramp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DONATE.md  Dockerfile  LICENSE  README.md  bump_version
.circleci/: config.yml
.github/workflows/: development.yml  docker-images.yml  docs.yml  release.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md  forward.md
book/src/install/: info.md  install_bin.md  install_cratesio.md  install_docker.md  install_source.md
book/src/user/: binaries.md  setup.md
book/src/user/setup/: merchant.md  mkek.md  moonrampctl.md  moonrampctl_program.md  moonrampctl_sale.md  moonrampctl_wallet.md
book/src/user/setup/cockroachdb/: moonramp.md
book/src/user/setup/mysql/: moonramp.md
book/src/user/setup/postgres/: moonramp.md
book/src/user/setup/sqlite/: db.md  moonramp.md
ci/: postgres-bitcoin.yml  sqlite-bitcoin.yml
guide/src/: SUMMARY.md  forward.md
guide/src/install/: info.md  install_bin.md  install_docker.md  install_source.md
guide/src/user/setup/: mkek.md
guide/src/user/setup/cockroachdb/: db.md
guide/src/user/setup/sqlite/: moonramp.md  moonrampctl.md  moonrampctl_program.md  moonrampctl_sale.md  moonrampctl_wallet.md
moonramp-bin/: Cargo.toml  README.md
moonramp-bin/src/: lib.rs  node_ctl.rs  program_ctl.rs  sale_ctl.rs  wallet_ctl.rs
moonramp-core/: Cargo.toml  README.md
moonramp-core/src/: lib.rs  types.rs
moonramp-encryption/: Cargo.toml  README.md
moonramp-encryption/src/: encryption_key.rs  key_encryption_key.rs  lib.rs  master_key_encryption_key.rs
moonramp-entity/: Cargo.toml  README.md
moonramp-entity/src/: api_token.rs  async_sale.rs  cipher.rs  currency.rs  encryption_key.rs  invoice.rs  key_encryption_key.rs  lib.rs  merchant.rs  network.rs  program.rs  role.rs  sale.rs  ticker.rs  wallet.rs
moonramp-gateway/: Cargo.toml  README.md
moonramp-gateway/src/: bitcoin.rs  json_rpc.rs  lib.rs  monero.rs
moonramp-http/: Cargo.toml  README.md
moonramp-http/src/: lib.rs
moonramp-migration/: Cargo.toml  README.md
moonramp-migration/src/: lib.rs  m20220330_000001_create_merchants_table.rs  m20220330_000002_create_api_tokens_table.rs  m20220330_000003_create_roles_table.rs  m20220330_000004_create_key_encryption_keys_table.rs  m20220330_000005_create_encryption_keys_table.rs  m20220330_000006_create_programs_table.rs  m20220330_000007_create_wallets_table.rs  m20220504_000008_create_invoices_table.rs  m20220504_000009_create_sales_table.rs  main.rs
moonramp-program/: Cargo.toml
moonramp-program-rpc/: Cargo.toml  README.md
moonramp-program-rpc/src/: http.rs  lib.rs  params.rs  rpc.rs
moonramp-program/src/: engine.rs
moonramp-registry/: Cargo.toml  README.md
moonramp-registry/src/: lib.rs
moonramp-rpc/: Cargo.toml  README.md
moonramp-rpc/src/: egress.rs  ingress.rs  lib.rs  runner.rs
moonramp-sale/: Cargo.toml  README.md
moonramp-sale-rpc/: Cargo.toml  README.md
moonramp-sale-rpc/src/: http.rs  lib.rs  params.rs  rpc.rs
moonramp-sale-rpc/src/tests/fixtures/: moonramp-program-default-sale.wasm  sale.wasm
moonramp-sale/src/: lib.rs
moonramp-wallet/: Cargo.toml  README.md
moonramp-wallet-rpc/: Cargo.toml  README.md
moonramp-wallet-rpc/src/: http.rs  lib.rs  params.rs  rpc.rs
moonramp-wallet/src/: bitcoin_wallet.rs  lib.rs  monero_wallet.rs
programs/default-sale/: Cargo.toml  Makefile  README.md
programs/default-sale/src/: lib.rs
programs/lunar/: Cargo.toml  README.md
programs/lunar/crates/lunar-core/: Cargo.toml  README.md
programs/lunar/crates/lunar-core/src/: lib.rs
programs/lunar/crates/lunar-core/src/gateway/: bitcoin.rs  bitcoin_cash.rs  mod.rs  monero.rs
programs/lunar/crates/lunar-macro/: Cargo.toml  README.md
programs/lunar/crates/lunar-macro/src/: lib.rs  program.rs
programs/lunar/src/: lib.rs
programs/test-sale/: Cargo.toml  Makefile  README.md
programs/test-sale/src/: lib.rs
