[workspace]

members = [
  "moonramp-bin",
  "moonramp-core",
  "moonramp-encryption",
  "moonramp-entity",
  "moonramp-gateway",
  "moonramp-http",
  "moonramp-migration",
  "moonramp-program",
  "moonramp-program-rpc",
  "moonramp-registry",
  "moonramp-rpc",
  "moonramp-sale",
  "moonramp-sale-rpc",
  "moonramp-wallet",
  "moonramp-wallet-rpc",
]

exclude = [
]
