[package]
name = "moonramp-core"
version = "0.1.5"
edition = "2021"

[lib]
name = "moonramp_core"
path = "src/lib.rs"

[features]
async-core = ["async-trait", "futures", "tokio", "wasmtime-wasi/tokio"]
crypto = ["aes-gcm-siv", "bs58", "chacha20poly1305", "sha3"]
crypto-currency-bitcoin = ["bip39", "bitcoin"]
crypto-currency-bitcoin-rpc = ["bitcoincore-rpc-json"]
http = ["actix-cors","actix-rt", "actix-web", "actix-web-httpauth", "awc", "hyper"] 
jsonrpc = ["jsonrpsee"]
money = ["rusty-money"]
random = ["rand", "uuid"]
serialization = ["serde", "serde_json"]
sql-enable-mysql = ["sea-orm/sqlx-mysql"]
sql-enable-postgres = ["sea-orm/sqlx-postgres"]
sql-enable-sqlite = ["sea-orm/sqlx-sqlite"]
sql = ["sea-orm", "sqlx", "sql-enable-postgres"]
time = ["chrono"]
wasm = ["wasmtime", "wasmtime-wasi"]

lib = ["async-core", "crypto", "log", "random", "serialization", "time"]
full = ["http", "lib", "sql"]

std = ["anyhow/std", "bip39/std", "bitcoin/std", "bs58/std", "rand/std", "rand/std_rng", "serde/std", "serde_json/std"]

embedded = ["bitcoin/secp-lowmemory"]

default = ["std"]

[dependencies]
actix-rt = { version = "2.7.0", default-features = false, optional = true }
actix-web = { version = "4.0.1", default-features = false, optional = true }
actix-web-httpauth = { version = "0.6.0", default-features = false, optional = true }
actix-cors = { version = "0.6.1", default-features = false, optional = true }
aes-gcm-siv = { version = "0.10.3", features = ["aes", "alloc"], default-features = false, optional = true }
anyhow = { version = "1.0.56", default-features = false }
#async-stream = { version = "0.3.3", default-features = false, optional = true }
async-trait = { version = "0.1.53", optional = true }
awc = { version = "3.0.0", default-features = false, optional = true }
bip39 = { version = "1.0.1", default-features = false, optional = true }
bitcoin = { version = "0.28.1", default-features = false, optional = true }
bitcoincore-rpc-json = { version = "0.15.0", default-features = false, optional = true }
bs58 = { version = "0.4.0", default-features = false, optional = true }
chacha20poly1305 = { version = "0.9.0", default-features = false, optional = true }
chrono = { version = "0.4.19", default-features = false, optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }
hyper = { version = "0.14.18", features = ["client", "runtime"], default-features = false, optional = true}
jsonrpsee = { version = "0.14.0", features = ["macros", "server"], default-features = false, optional = true }
log = { version = "0.4.16", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, optional = true }
rusty-money = { version = "0.4.1", default-features = false, optional = true }
sea-orm = { version = "0.8.0", features = ["runtime-tokio-rustls", "macros"], default-features = false, optional = true }
serde = { version = "1.0.117", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0.59", default-features = false, optional = true }
sha3 = { version = "0.10.1", default-features = false, optional = true }
sqlx = { version = "*", features = ["runtime-tokio-rustls"], default-features = false, optional = true }
tokio = { version = "1.17", features = ["fs", "macros", "rt", "sync", "time"], default-features = false, optional = true }
uuid = { version = "0.8.2", features = ["serde", "v4"], default-features = false, optional = true }
wasmtime = { version = "0.35.3", optional = true }
wasmtime-wasi = { version = "0.35.3", optional = true }
