[package]
name = "moonramp-core"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.24"
edition = "2021"
license = "MIT"

[lib]
name = "moonramp_core"
path = "src/lib.rs"

[features]
async-core = ["async-trait", "futures", "tokio", "wasmtime-wasi/tokio"]
crypto = ["aes-gcm-siv", "argon2", "chacha20poly1305", "hkdf", "sha3"]
crypto-currency-bitcoin = ["bip39", "bitcoin"]
crypto-currency-bitcoin-rpc = ["bitcoincore-rpc-json"]
crypto-currency-monero = ["curve25519-dalek", "monero"]
crypto-currency-monero-rpc = ["monero-rpc"]
http = ["actix-cors","actix-rt", "actix-web", "actix-web-httpauth", "awc", "hyper", "jsonrpsee/http-client"] 
jsonrpc = ["jsonrpsee"]
money = ["rusty-money"]
random = ["rand", "uuid"]
serialization = ["bs58", "lz4_flex", "rmp-serde", "serde", "serde_json"]
sql-enable-mysql = ["sea-orm/sqlx-mysql"]
sql-enable-postgres = ["sea-orm/sqlx-postgres"]
sql-enable-sqlite = ["sea-orm/sqlx-sqlite"]
sql = ["sea-orm", "sql-enable-postgres"]
time = ["chrono"]
wasm = ["wasmtime", "wasmtime-wasi"]

lib = ["async-core", "crypto", "log", "random", "serialization", "time"]
full = ["http", "lib", "sql"]

std = ["anyhow/std", "argon2/std", "bip39/std", "bitcoin/std", "bs58/std", "curve25519-dalek/std", "hkdf/std", "lz4_flex/std", "rand/std", "rand/std_rng", "serde/std", "serde_json/std"]

embedded = ["bitcoin/secp-lowmemory"]

test = []

default = ["std"]

[dependencies]
#async-stream = { version = "0.3.3", default-features = false, optional = true }
#sqlx = { version = "*", features = ["runtime-tokio-rustls"], default-features = false, optional = true }
actix-cors = { version = "0.6.1", default-features = false, optional = true }
actix-rt = { version = "2.7.0", default-features = false, optional = true }
actix-web = { version = "4.1.0", default-features = false, optional = true }
actix-web-httpauth = { version = "0.6.0", default-features = false, optional = true }
aes-gcm-siv = { version = "0.10.3", features = ["aes", "alloc"], default-features = false, optional = true }
anyhow = { version = "1.0.56", default-features = false }
argon2 = { version = "0.4.1", default-features = false, optional = true}
async-trait = { version = "0.1.56", optional = true }
awc = { version = "3.0.0", default-features = false, optional = true }
bip39 = { version = "1.0.1", default-features = false, optional = true }
bitcoin = { version = "0.28.1", default-features = false, optional = true }
bitcoincore-rpc-json = { version = "0.15.0", default-features = false, optional = true }
bs58 = { version = "0.4.0", default-features = false, optional = true }
chacha20poly1305 = { version = "0.9.0", default-features = false, optional = true }
chrono = { version = "0.4.19", default-features = false, optional = true }
curve25519-dalek = { version = "3.2.1", features = ["u64_backend"], default-features = false, optional = true }
futures = { version = "0.3.21", default-features = false, optional = true }
hkdf = { version = "0.12.3", default-features = false, optional = true }
hyper = { version = "0.14.18", features = ["client", "runtime"], default-features = false, optional = true}
jsonrpsee = { version = "0.15", features = ["macros", "server"], default-features = false, optional = true }
log = { version = "0.4.16", default-features = false, optional = true }
lz4_flex = { version = "0.9.4", features = ["safe-encode", "safe-decode"], default-features = false, optional = true }
monero = { version = "0.17.2", features = ["full", "serde"], default-features = false, optional = true }
monero-rpc = { git = "https://github.com/FistedByDionysus/monero-rpc-rs.git", branch = "block_api", default-features = false, optional = true}
rand = { version = "0.8.5", default-features = false, optional = true }
rmp-serde = { version = "1.1.0", default-features = false, optional = true }
rusty-money = { version = "0.4.1", default-features = false, optional = true }
sea-orm = { version = "0.8.0", features = ["runtime-tokio-rustls", "macros"], default-features = false, optional = true }
serde = { version = "1.0.117", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0.59", default-features = false, optional = true }
sha3 = { version = "0.10.1", default-features = false, optional = true }
tokio = { version = "1.20", features = ["fs", "macros", "rt", "sync", "time"], default-features = false, optional = true }
uuid = { version = "0.8.2", features = ["serde", "v4"], default-features = false, optional = true }
wasmtime = { version = "0.40.1", optional = true }
wasmtime-wasi = { version = "0.40.1", optional = true }
