[package]
name = "moonramp-encryption"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.24"
edition = "2021"
license = "MIT"

[lib]
name = "moonramp_encryption"
path = "src/lib.rs"

[features]
testing = ["moonramp-entity/testing"]

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "sql"] }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity" }
