[package]
name = "moonramp-entity"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.23"
edition = "2021"
license = "MIT"

[lib]
name = "moonramp_entity"
path = "src/lib.rs"

[features]
testing = []

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "sql"] }
