[package]
name = "moonramp-gateway"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.24"
edition = "2021"
license = "MIT"

[features]
bitcoin = ["moonramp-core/crypto-currency-bitcoin"]
monero = ["moonramp-core/crypto-currency-monero"]

all-currencies = ["bitcoin", "monero"]

default = ["all-currencies"]

[dependencies]
# Needed for macro usage
jsonrpsee = { version = "0.15", features = ["macros", "http-client"], default-features = false }

moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["http", "serialization", "wasm"] }

moonramp-lunar = { version = "0.1.0", path = "../programs/lunar" }
