[package]
name = "moonramp-http"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
readme = "README.md"
version = "0.1.20"
edition = "2021"
license = "MIT"

[dependencies]
# Needed for macro usage
actix-web = { version = "*" }
# Needed for macro usage
jsonrpsee = { version = "*" }

moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "http"] }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity" }

[dev-dependencies]
moonramp-migration = { version = "^0.1", path = "../moonramp-migration", features = ["testing"] }
