[package]
name = "moonramp-http"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.22"
edition = "2021"
license = "MIT"

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "http"] }
moonramp-encryption = { version = "^0.1", path = "../moonramp-encryption" }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity" }

[dev-dependencies]
moonramp-migration = { version = "^0.1", path = "../moonramp-migration", features = ["testing"] }
