[package]
name = "moonramp-migration"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.23"
edition = "2021"
license = "MIT"

[lib]
name = "moonramp_migration"
path = "src/lib.rs"

[[bin]]
name = "moonramp-migration"
path = "src/main.rs"

[features]
testing = []

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
sea-orm-migration = { version = "^0.8.0", default-features = false }

moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["async-core", "crypto", "sql"] }
moonramp-encryption = { version = "^0.1", path = "../moonramp-encryption" }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity" }

