[package]
name = "moonramp-program"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.23"
edition = "2021"
license = "MIT"

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "wasm"] }
moonramp-gateway = { version = "^0.1", path = "../moonramp-gateway" }

moonramp-lunar = { version = "^0.1", path = "../programs/lunar" }
