[package]
name = "moonramp-registry"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
readme = "README.md"
version = "0.1.20"
edition = "2021"
license = "MIT"

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib"] }
