[package]
name = "moonramp-rpc"
version = "0.1.15"
edition = "2021"

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "http", "jsonrpc"] }

[dev-dependencies]
# Needed for macro usage
jsonrpsee = { version = "0.14.0", features = ["macros", "server"], default-features = false }
