[package]
name = "moonramp-rpc"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.22"
edition = "2021"
license = "MIT"

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["lib", "http", "jsonrpc"] }

[dev-dependencies]
# Needed for macro usage
jsonrpsee = { version = "0.14.0", features = ["macros", "server"], default-features = false }
