[package]
name = "moonramp-sale-rpc"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.22"
edition = "2021"
license = "MIT"

[dependencies]
# Needed for macro usage
actix-web = { version = "*" }
# Needed for macro usage
jsonrpsee = { version = "0.14.0", features = ["macros", "server"], default-features = false }

moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["full", "wasm"] }
moonramp-encryption = { version = "^0.1", path = "../moonramp-encryption" }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity" }
moonramp-http = { version = "^0.1", path = "../moonramp-http" }
moonramp-program = { version = "^0.1", path = "../moonramp-program" }
moonramp-registry = { version = "^0.1", path = "../moonramp-registry" }
moonramp-rpc = { version = "^0.1", path = "../moonramp-rpc" }
moonramp-sale = { version = "^0.1", path = "../moonramp-sale" }
moonramp-wallet = { version = "^0.1", path = "../moonramp-wallet" , features = ["entity", "all-currencies"] }

moonramp-lunar = { version = "^0.1", path = "../programs/lunar" }

[dev-dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["full", "wasm", "sql-enable-sqlite"] }
moonramp-encryption = { version = "^0.1", path = "../moonramp-encryption", features = ["testing"] }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity", features = ["testing"] }
moonramp-migration = { version = "^0.1", path = "../moonramp-migration", features = ["testing"] }
