[package]
name = "moonramp-sale"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
readme = "README.md"
version = "0.1.20"
edition = "2021"
license = "MIT"

[features]
entity = ["moonramp-entity"]

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["serialization"] }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity", optional = true }
moonramp-wallet = { version = "^0.1", path = "../moonramp-wallet" , features = ["entity", "all-currencies"] }

moonramp-lunar = { version = "0.1.0", path = "../programs/lunar" }
