[package]
name = "moonramp-wallet-rpc"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.24"
edition = "2021"
license = "MIT"

[dependencies]
# Needed for macro usage
actix-web = { version = "4.1.0" }
# Needed for macro usage
jsonrpsee = { version = "0.15", features = ["macros", "server"], default-features = false }

moonramp-core = { version = "0.1.0", path = "../moonramp-core", features = ["full"] }
moonramp-encryption = { version = "0.1.0", path = "../moonramp-encryption" }
moonramp-entity = { version = "0.1.0", path = "../moonramp-entity" }
moonramp-http = { version = "0.1.0", path = "../moonramp-http" }
moonramp-registry = { version = "0.1.0", path = "../moonramp-registry" }
moonramp-rpc = { version = "0.1.0", path = "../moonramp-rpc" }
moonramp-wallet = { version = "0.1.0", path = "../moonramp-wallet" , features = ["entity", "all-currencies"] }

[dev-dependencies]
moonramp-core = { version = "0.1.0", path = "../moonramp-core", features = ["full", "sql-enable-sqlite"] }
moonramp-migration = { version = "0.1.0", path = "../moonramp-migration", features = ["testing"] }
