[package]
name = "moonramp-wallet"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "Crypto Payment Gateway"
readme = "README.md"
version = "0.1.24"
edition = "2021"
license = "MIT"

[features]
entity = ["moonramp-entity"]

bitcoin = ["moonramp-core/crypto-currency-bitcoin"]

monero = ["moonramp-core/crypto-currency-monero"]

all-currencies = ["bitcoin", "monero"]

default = ["all-currencies"]

[dependencies]
moonramp-core = { version = "^0.1", path = "../moonramp-core", features = ["random", "serialization"] }
moonramp-entity = { version = "^0.1", path = "../moonramp-entity", optional = true }
