[package]
name = "moonramp-program-default-sale"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
description = "MoonRamp default sale program"
readme = "README.md"
version = "0.1.22"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
moonramp-lunar = { version = "^0.1", path = "../lunar" }

[profile.dev]
lto = true
opt-level = 's'

[profile.release]
lto = true
opt-level = 'z'
