[package]
name = "moonramp-lunar"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
readme = "README.md"
version = "0.1.20"
edition = "2021"
license = "MIT"

[dependencies]
moonramp-lunar-core = { version = "^0.1", path = "./crates/lunar-core" }
moonramp-lunar-macro = { version = "^0.1", path = "./crates/lunar-macro" }
