[package]
name = "lunar-core"
version = "0.1.12"
edition = "2021"

[dependencies]
wee_alloc = { version = "0.4.5" }

moonramp-core = { version = "^0.1", path = "../../../../moonramp-core", features = ["embedded", "crypto-currency-bitcoin-rpc", "serialization"] }
moonramp-wallet = { version = "^0.1", path = "../../../../moonramp-wallet", features = ["all-currencies"] }
