[package]
name = "moonramp-lunar-core"
authors = ["MoonRamp Contributors", "Dionysus <fisted-by-dionysus@proton.me>"]
homepage = "https://moonramp.github.io"
repository = "https://github.com/moonramp/moonramp"
readme = "README.md"
version = "0.1.21"
edition = "2021"
license = "MIT"

[dependencies]
wee_alloc = { version = "0.4.5" }

moonramp-core = { version = "^0.1", path = "../../../../moonramp-core", features = ["embedded", "crypto-currency-bitcoin-rpc", "serialization"] }
moonramp-wallet = { version = "^0.1", path = "../../../../moonramp-wallet", features = ["all-currencies"] }
